# iwcore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml
docs/: index.html
src/: error.rs  lib.rs
src/backup/: create.rs  mod.rs  restore.rs
src/business/: export.rs  fields.rs  items.rs  labels.rs  mod.rs  search.rs  wallet.rs
src/crypto/: aead.rs  aes.rs  dek.rs  kdf.rs  key.rs  md5.rs  mod.rs  password.rs  tests.rs  wordlist.rs
src/database/: connection.rs  migrations.rs  mod.rs  models.rs  queries.rs  schema.rs
src/export/: csv.rs  json.rs  mod.rs  xml.rs
src/localization/: mod.rs
src/localization/languages/: be.json  bg.json  ca.json  de.json  en.json  es.json  hi.json  pl.json  pt.json  ru.json  uk.json
src/utils/: common.rs  id_gen.rs  mod.rs
tests/: backup_tests.rs  dump_data.rs  integration_tests.rs  migration_tests.rs
