[package]
name = "iwcore"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/intellisoftalpin/iwcore"
homepage = "https://intelliwallet.io"
documentation = "https://docs.rs/iwcore"
authors = ["IntelliSoftAlpin"]
description = "IntelliWallet Core - Password manager library with AES-256 encryption"
keywords = ["password-manager", "encryption", "aes", "security"]
categories = ["cryptography", "database"]
readme = "README.md"

[dependencies]
# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Crypto
aes = "0.8"
cbc = "0.1"
md-5 = "0.10"
block-padding = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
zip = "7.0"
uuid = { version = "1.11", features = ["v4"] }
rand = "0.9"
tempfile = "3.14"

[dev-dependencies]

[features]
default = []
