[package]
name = "iwcore"
version = "0.1.13"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/intellisoftalpin/iwcore"
homepage = "https://intelliwallet.io"
documentation = "https://docs.rs/iwcore"
authors = ["IntelliSoftAlpin"]
description = "IntelliWallet Core - Password manager library with AES-256 encryption"
keywords = ["password-manager", "encryption", "aes", "security"]
categories = ["cryptography", "database"]
readme = "README.md"

[dependencies]
# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Crypto
aes = "0.9.0-rc.2"
cbc = "0.2.0-rc.1"
md-5 = "0.11.0-rc.2"
block-padding = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
zip = "7.2"
genpdf = "0.2"
uuid = { version = "1.20", features = ["v4"] }
rand = "0.9"
tempfile = "3.24"

[dev-dependencies]

[features]
default = []
